modules/gdscript/tests/scripts/analyzer/errors/enum_shadows_base_enum.gd
class A:
	enum { V }

class B extends A:
	enum { V }

func test():
	pass
